2008-01-17  Alexander Larsson  <alexl@redhat.com>

        * gfile.h:
	Add the async find_enclosing_mount version
	to the header file too.

2008-01-17  Alexander Larsson  <alexl@redhat.com>

        * gfile.c:
	Add async version of find_enclosing_mount
	with default implementation.

2008-01-17  Alexander Larsson  <alexl@redhat.com>

        * gfile.c:
        (g_file_copy):
        (g_file_move):
	Allow calls to implementation of copy and write
	even if the type of the file implementations is
	different. This can be used to implement native
	upload and download calls in a vfs.
	
        * glocalfile.c:
        (g_local_file_move):
	Protect against the case where move is called
	with one file not being local.
	
	Make sure we call the progress callback once
	in the native move operation so that the caller
	knows how many bytes were copied.

2008-01-16  Murray Cumming  <murrayc@murrayc.com>

	* gappinfo.c:
	* gdatainputstream.c:
	* gfile.c:
	* gfileoutputstream.c:
	* ginputstream.c:
	* gmount.c:
	* goutputstream.c:
	* gseekable.c:
	* gunixmounts.c: Corrected some typos in the documentation:
	occured -> occurred.
	its -> it's (where appropriate).

2008-01-16  Alexander Larsson  <alexl@redhat.com>

        * gfile.[ch]:
        * gio.symbols:
        Add g_file_query_exists (#508771)

2008-01-15  Murray Cumming  <murrayc@murrayc.com>

	* gdrive.c:
	* gfile.c:
	* gmount.c:
	* gvolume.c: For async functions that have no non-async 
	version, document that the GAsyncReadyCallback may be NULL.
	Bug #509626.

2008-01-15  Alexander Larsson  <alexl@redhat.com>

        * gmemoryinputstream.c:
        * gmemoryoutputstream.c:
	Don't do pointer arithmetic on void * (#508602)
	Patch from Kazuki IWAMOTO

2008-01-14  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.2 ===

2008-01-14  Alexander Larsson  <alexl@redhat.com>

	* gfile.c (g_file_monitor_file):
	Don't set error here, since we fallback to polling monitor.

2008-01-14  Alexander Larsson  <alexl@redhat.com>
